--- a/package.json
+++ b/package.json
@@ -58,7 +58,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.1.0",
-    "prettier": "2.8.1"
+    "prettier": "2.8.1",
+    "sass": "^1.58.3",
+    "sass-loader": "^13.2.0",
+    "webpack": "^5.75.0"
   },
   "husky": {
     "pre-commit": "lint-staged"
